# radalert-py

./: .pre-commit-config.yaml  LICENSE.md  README.md  ble.py  log.sh  main.py  radalertle.py  radalertlog.py  requirements.txt  run.sh  sendlog.sh  setup.cfg  setup.py
example/: example.py
examples/log/: example-hid.py  example.py  logger.py
radalert/: ble.py  generic.py  hid.py  usb.py
radalert/_examples/log/: example_bt.py  example_hid.py  example_usb.py  logger.py
radalert/_examples/systemd/: README.md
radalert/_examples/systemd/etc/default/: radalert
radalert/_examples/systemd/etc/systemd/system/: radalert.service
radalert/_util/: ble.py  filter.py  net.py
radalert/util/: ble.py  filter.py  net.py
ref/bluepy/: __init__.pyi  btle.pyi
ref/hid/: __init__.pyi  hid.pyi
