[metadata]
name = radalert
description = Python API to communicate with Radiation Alert geiger counters from S.E. International
description-file = README.md
author = Jason Gerecke
author-email = killertofu@gmail.com
license = Apache-2
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = radalert
