[metadata]
name = radalert
description = Python API to communicate with Radiation Alert geiger counters from S.E. International
description-file = README.md
author = Jason Gerecke
author-email = killertofu@gmail.com
license = Apache-2
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = radalert

[options.entry_points]
console_scripts =
    radalert-bt = radalert._examples.log.example_bt:main
    radalert-hid = radalert._examples.log.example_hid:main
    radalert-usb = radalert._examples.log.example_usb:main
